tests/lean/277a.lean.expected.out
277a.lean:4:7-4:15: error: unknown identifier 'nonexistent'
277a.lean:4:0-4:25: error: cannot evaluate expression that depends on the `sorry` axiom.
Use `#eval!` to evaluate nevertheless (which may cause lean to crash).
